frontend/src/components/homepage/homepage.css
.homepage-wrapper {
  min-height: 100vh;
  background: #2e3740;
  font-family: 'Montserrat', sans-serif;
  cursor: default;
}

.homepage-inner-wrapper {
  max-width: 100%;
  max-height: 640px;
  align-items: center;
  justify-content: center;
}

.homepage-img-wrapper {
  height: 80vh;
  opacity: 0.7;
  display: flex;
  align-items: center;
  justify-content: center;
}

.homepage-job-buttons {
  max-width: 100%;
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  padding-right: 5%;
  padding-left: 5%;
}

.homepage-job-right-elements-wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  position: relative;
  z-index: 1;
}

.homepage-job-buttons-right-header {
  color: #2e3740;
  font-size: 30px;
  font-weight: 700;
  padding-bottom: 10px;
}

.homepage-rj-button {
  color: #1fce6d;
  background-color: rgba(0, 0, 0, 0.399);
  border: 3px solid #1fce6d;
  width: 180px;
  height: 77px;
  font-size: 20px;
  outline: none;
  transition: 0.5s;
}
.homepage-rj-button:hover {
  background-color: #1fce6d;
  color: white;
}

.homepage-job-left-elements-wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.homepage-job-buttons-left-header {
  color: #2e3740;
  font-size: 30px;
  font-weight: 700;
  padding-bottom: 10px;
}

.homepage-lj-button {
  color: #1fce6d;
  background-color: rgba(0, 0, 0, 0.399);
  border: 3px solid #1fce6d;
  width: 180px;
  height: 70px;
  font-size: 20px;
  outline: none;
  transition: 0.5s;
}

.homepage-lj-button:hover {
  background-color: #1fce6d;
  color: white;
}

